2011-05-29  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp
	(delete-child-and-children-in-all-frames): Show all children
	before deleting/destroying a windows, so prevent a flickering.
	(get-parent-layout): Return the fullscreen size when the current
	root is a window.

2011-05-28  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (get-parent-layout): Handle correctly
	unmanaged windows.

	* src/clfswm-util.lisp (delete-focus-window-generic): Do not hide
	child before removing, so prevent a flickering.

	* src/clfswm-internal.lisp (show-all-children): Rectangular
	optimization to display only needed children.
	(show-all-children): Remove flickering on
	select-next/previous-brother.

2011-05-17  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (copy-focus-window, cut-focus-window): New
	functions and ask-close/kill-current-window menu and bindings
	entry.

2011-05-16  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (ask-close/kill-current-window): Add an
	*ask-close/kill-placement* placement window variable.

2011-05-09  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/osd.lisp (funcall-button-from-code): Display osd
	documention for buttons and fix some redefining warnings.

2011-05-07  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-nw-hooks.lisp (make-permanent-nw-hook-frame): New
	function. Prevent to add or delete a new window hook for this
	frame.

	* src/clfswm-layout.lisp (update-layout-managed-children-position):
	New function.

2011-05-06  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/bindings-second-mode.lisp (set-default-second-keys):
	select-brother-spatial-move-* binding update.

	* src/clfswm-layout.lisp (tile-left|right|top|bottom-layout): Ask
	to keep children positions or not.

	* src/clfswm-internal.lisp (fixe-real-size): Takes care of border
	size.

	* src/clfswm-layout.lisp (update-layout-managed-children): Fix a